<resources>
    <string name="app_name">Droid Cafe</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="text_intro">Droid Desserts</string>
    <string name="donuts">Donuts are glazed and springled with candy.</string>
    <string name="ice_cream_sandwiches">Ice Cream Sandwiches have chocolate wafery and Ice Cream Sandwiches vanila filling</string>
    <string name="froyo">Froyo is a premium self serve frozen yogurt Froyo</string>

    <string name="donut_order_message">You Ordered Donut</string>
    <string name="ice_cream_order_message">You Ordered an Ice Cream Sandwich</string>
    <string name="froyo_order_message">You Ordered Froyo</string>
    <string name="name_label_text">Name</string>
    <string name="enter_name_hint">Enter Name</string>
    <string name="address_label">Address</string>
    <string name="enter_address_hint">Enter Address</string>
    <string name="phone_label_text">Phone</string>
    <string name="enter_phone_hint">Enter Phone Number</string>
    <string name="enter_password_hint">Enter Password</string>
    <string name="password_label">Password</string>
    <string name="enter_email_hint">Enter Email</string>
    <string name="email_label">Email</string>
    <string name="enter_note_hint">Enter Note</string>
    <string name="note_label">Note</string>
    <string name="Choose_delivery_method">Delivery Method</string>
    <string name="pick_up">Pick Up</string>
    <string name="next_day_ground_delivery">Next day ground delivery</string>
    <string name="same_day_messanger_service">Same day Messanger Service</string>
    <string name="enter_phone_call_hint">Enter Phone</string>
    <string name="phone_number_label">Phone Number</string>
    <string name="action_contact">Contact</string>
    <string name="action_order">Order</string>
    <string name="action_status">Status</string>
    <string name="action_favourites">Favourites</string>

    <string name="action_order_message">You have selected Order</string>
    <string name="action_contact_message">You have selected Contact</string>
    <string name="action_favourites_message">You have selected Favorites</string>
    <string name="action_status_message">You have selected Status</string>
    <string name="title_activity_order">Order Activity</string>

    <string-array name="labels_array">
        <item>Home</item>
        <item>Work</item>
        <item>Mobile</item>
        <item>Other</item>

    </string-array>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="pref_header_account">Account</string>
    <string name="pref_title_account">Market</string>
    <string-array name="pref_sync_frequency_title">
        <item>15 Minutes</item>
        <item>30 Minutes</item>
        <item>1 Hour</item>
        <item>3 Hours</item>
        <item>6 Hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_market_titles">
        <item>United States</item>
        <item>Canada</item>
        <item>United kingdom</item>
        <item>India</item>
        <item>Japan</item>
        <item>Others</item>
    </string-array>
    <string-array name="pre_market_values">
        <item>US</item>
        <item>CA</item>
        <item>UK</item>
        <item>IN</item>
        <item>JA0</item>
        <item>-1</item>
    </string-array>
<string-array name="list_preference_entry_values">
    <item>1</item>
    <item>2</item>
    <item>3</item>
</string-array>
    <string-array name="multi_select_preference_values"/>
    <string name="pref_title_account_settings">Account settings</string>


    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="settings_menu">Settings</string>
</resources>